--- a/flask_blog/templates/about.html
+++ b/flask_blog/templates/about.html
@@ -19,20 +19,7 @@
                             <span><i class="fas fa-bars"></i></span>
                         </button>
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                            <ul class="navbar-nav text-uppercase">
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/">Home</a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="#">About <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/services">Services</a>
-                                </li>                            
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/contact">Contact</a>
-                                </li>
-                            </ul>                            
+                            {% include 'sub_templates/menu.html' %}
                         </div>                        
                     </nav>
                 </div>
