--- a/flask_blog/templates/base.html
+++ b/flask_blog/templates/base.html
@@ -41,20 +41,7 @@ https://templatemo.com/tm-550-diagoona
                             <span><i class="fas fa-bars"></i></span>
                         </button>
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                            <ul class="navbar-nav text-uppercase">
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/about">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/services">Services</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/contact">Contact</a>
-                                </li>
-                            </ul>
+                            {% include 'sub_templates/menu.html' %}
                         </div>
                     </nav>
                 </div>
