--- a/flask_blog/templates/services.html
+++ b/flask_blog/templates/services.html
@@ -19,20 +19,7 @@
                             <span><i class="fas fa-bars"></i></span>
                         </button>
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                            <ul class="navbar-nav text-uppercase">
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/about">About</a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="#">Services <span class="sr-only">(current)</span></a>
-                                </li>                            
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/contact">Contact</a>
-                                </li>
-                            </ul>                            
+                            {% include 'sub_templates/menu.html' %}
                         </div>                        
                     </nav>
                 </div>
@@ -43,7 +30,7 @@
                 <main class="tm-col-right">
                     <section class="tm-content">
                         <div class="media my-3 mb-5 tm-service-media tm-service-media-img-l">
-                            <img src="img/services-1.jpg" alt="Image" class="tm-service-img">
+                            <img src="{{url_for('static', filename='img/services-1.jpg')}}" alt="Image" class="tm-service-img">
                             <div class="media-body tm-service-text">
                                 <h2 class="mb-4 tm-content-title">Best Services for you</h2>
                                 <p>Our template is simple and effective. This is an alternating simple content with a squared size image. Menu hover is #9CC and text #FFF</p>
@@ -54,10 +41,10 @@
                                 <h2 class="mb-4 tm-content-title">Customer Satisfaction</h2>
                                 <p>Feel free to contact TemplateMo for any kind of question. If you wish to support us, you can make a PayPal donation. Thank you.</p>
                             </div> 
-                            <img src="img/services-2.jpg" alt="Image" class="tm-service-img-r">
+                            <img src="{{url_for('static', filename='img/services-2.jpg')}}" alt="Image" class="tm-service-img-r">
                         </div>
                         <div class="media my-3 tm-service-media tm-service-media-img-l">
-                            <img src="img/services-3.jpg" alt="Image" class="tm-service-img">
+                            <img src="{{url_for('static', filename='img/services-3.jpg')}}" alt="Image" class="tm-service-img">
                             <div class="media-body tm-service-text">
                                 <h2 class="mb-4 tm-content-title">Template Usage</h2>
                                 <p>You are free to use this template for your website either commercial or personal.</p>
