--- a/flask_blog/templates/old_templates/login.html
+++ b/flask_blog/templates/old_templates/login.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% block container %}
+{% extends "layout.html" %}
+{% block content %}
     <div class="content-section" style="box-shadow: 10px 15px 10px #4a4e69;">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
@@ -43,11 +43,12 @@
                 </small>
 
 
+
+
             </div>
             <small style="font-size: 15px; font-weight: 500;">
                 Нужен аккаунт? <a class="ml-2" href="{{ url_for('users.register') }}">Зарегистрируйтесь</a>
             </small>
         </form>
-        <button class="nav-item active"><a class="nav-link tm-nav-link" href="{{url_for('main.home')}}">На главную</a></button>
     </div>
-{% endblock %}
+{% endblock content %}
